created basic tests infra

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
+    "@pinia/testing": "^1.0.1",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/test-utils": "^2.4.6",
     "eslint": "^9.27.0",
